# validation-foundry

./: .gitignore  AGENTS.md  SPEC.md  pyproject.toml
.agents/skills/: README.md
.specify/memory/: constitution.md
configs/: README.md
docs/: ARTIFACT_PROTOCOL.md  PROJECT_BRIEF.md
docs/architecture/: 01-introduction-and-goals.md  02-constraints.md  03-context-and-scope.md  04-solution-strategy.md  08-crosscutting-concepts.md  10-quality-requirements.md  11-risks-and-technical-debt.md  12-glossary.md
docs/archive/: README.md
docs/doc-governance/: README.md  current-doc-inventory.md  current-module-inventory.md  module-doc-status.csv  module-lifecycle.md
docs/project-management/: child-agent-thread-plan.md  current-phase-plan.md  current-status.md  option-b-apple-silicon-migration.md  phase-gates.md  reference-inheritance-map.md  restart-remediation-report.md
docs/repository-metadata/: README.md  code-boundaries-and-entrypoints.md  code-size-audit.md  entrypoint-registry.md  repository-structure-metadata.md
modules/_template/: AGENTS.md  FAILURE_TAXONOMY.md  INTERFACE_CONTRACT.md  README.md  RUNBOOK.md  review-summary.md
modules/t01_pickup_point_validation/: AGENTS.md  FAILURE_TAXONOMY.md  INTERFACE_CONTRACT.md  README.md  RUNBOOK.md  review-summary.md
modules/t02_route_coldstart/: AGENTS.md  README.md  (+4 more)
outputs/: README.md
scripts/: README.md
tests/: README.md
tools/: README.md  t02_crs_satellite_compare.py  t02_google_earth_windows_capture.py  t02_liuzhijiao_export_gpx.py  t02_liuzhijiao_google_earth_kml.py  t02_liuzhijiao_route_catalog.py
(+384 files in other folders)
